--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body, html {
 }
 .movie-container {
     display: grid;
-    grid-template-columns: 75px 1fr 120px;
+    grid-template-columns: 75px 1fr 150px;
     align-self: self-start;
     gap: 0px 2px ;
 }
@@ -112,6 +112,7 @@ body, html {
 
 .movie-right {
     text-align: right;
+    margin-right:5px;
   }
 .rating img {
     vertical-align: text-top;
@@ -132,7 +133,7 @@ body, html {
     text-align: center;
     line-height: 50px;
     font-weight: bold;
-    font-size: 1.6em;
+    font-size: 1.3em;
 }
 .movie-closing {
     background-color: rgb(18, 99, 61);
@@ -187,7 +188,6 @@ button {
 	box-shadow: 0px 1px 0px 0px #000000;
 	background:linear-gradient(to bottom, #ffec73 5%, #e3a035 100%);
 	background-color:#ffec73;
-	border-radius:3px;
 	border:1px solid #c7b293;
 	display:inline-block;
 	cursor:pointer;
@@ -198,7 +198,6 @@ button {
 	padding:3px 14px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #f2e796;
-    margin: 0px 0px 0px 5px
 }
 button:hover {
 	background:linear-gradient(to bottom, #e3a035 5%, #ffec73 100%);
@@ -219,6 +218,9 @@ button.myButton:active {
         float: none;
         width: 100%;
         text-align: center;
+    }
+    h1.neontitle {
+        font-size: 2em;
     }
 
     #title-date {
@@ -249,11 +251,10 @@ button.myButton:active {
         gap: 0px 2px ;
     }
     .movie-time {
-        height: 50px;
         text-align: center;
-        line-height: 50px;
         font-weight: bold;
-        font-size: 1.1em;
+        font-size: 1em;
+
     }
     .movie-title {
         font-size: 1em;
@@ -283,5 +284,13 @@ button.myButton:active {
     }
     .movie-mobile-rating-img {
         height: 18px;
+    }
+
+    .movie-closing {
+        font-size: 0.8em;
+    }
+
+    .movie-closing small {
+        font-size: 0.7em;
     }
 }
